<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:text="@string/app_name"
            android:padding="16dp"
            android:textColor="#FFF"
            style="@style/TextAppearance.AppCompat.Title"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/playlist"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintBottom_toTopOf="@id/seek_bar"/>

    <SeekBar
        android:id="@+id/seek_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/now_playing" />

    <TextView
        android:id="@+id/now_playing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/song_title_tv"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/now_playing"
        android:paddingTop="8dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/song_title_tv"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/time_ph"
        android:paddingTop="8dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/song_title_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/media_controller"
        tools:text="Song title"
        android:textSize="20sp"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingBottom="16dp"
        android:paddingEnd="16dp"/>

    <LinearLayout
        android:id="@+id/media_controller"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/colorPrimary">

        <ImageButton
            android:id="@+id/prev_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_skip_previous"
            android:contentDescription="@string/previous_song"
            style="@style/Widget.AppCompat.Button.Borderless"/>

        <ImageButton
            android:id="@+id/play_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_play"
            android:contentDescription="@string/play_song"
            style="@style/Widget.AppCompat.Button.Borderless"/>

        <ImageButton
            android:id="@+id/pause_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_pause"
            android:contentDescription="@string/pause_song"
            style="@style/Widget.AppCompat.Button.Borderless"/>

        <ImageButton
            android:id="@+id/stop_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_stop"
            android:contentDescription="@string/stop_song"
            style="@style/Widget.AppCompat.Button.Borderless"/>

        <ImageButton
            android:id="@+id/next_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_skip_next"
            android:contentDescription="@string/next_song"
            style="@style/Widget.AppCompat.Button.Borderless"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>